-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.0 Beta1
-
-
5dd7164c97bee863d29bfd724cfcad380e2c786a
QFileDialog isn't very useful, because the WinRT file system engine can't read outside of the app sandbox. The only way to access user files is through extra capabilities or the native file picker.
The QPA backend for QFileDialog should be implemented so that file selection is actually useful.