src/plugins/platforms/winrt/qwinrtfiledialoghelper.h
@@ -1,0 +1,2 @@
+DECL|macro|QWINRTFILEDIALOGHELPER_H
+DECL|variable|QWinRTFileDialogHelperPrivate
