src/plugins/platforms/winrt/qwinrtfileengine.h
@@ -1,0 +1,3 @@
+DECL|macro|QWINRTFILEENGINE_H
+DECL|variable|QWinRTFileEngineHandlerPrivate
+DECL|variable|QWinRTFileEnginePrivate
